--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,13 @@ body {
     padding: 0;
     overflow: hidden;
     background: black;
+
+    cursor: crosshair;
 }
 
 :root {
   --ui: red;
+  --strong-ui: white;
 }
 
 /* CHECKBOX */
@@ -39,17 +42,6 @@ input[type="checkbox"]:checked {
 #option input[type="radio"]:checked + span::before{ content: "> "; }
 #option input[type="radio"]:checked + span::after{  content: " <"; }
 
-#webcam {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    object-fit: cover; /* Ensures fullscreen without distortion */
-    transform: scaleX(-1);
-    z-index: 1;
-}
-
 #overlay {
     position: absolute;
     top: 0;
@@ -70,16 +62,70 @@ input[type="checkbox"]:checked {
     object-fit: cover; /* Ensures fullscreen without distortion */
     z-index: 2;
     transform: scaleX(-1);
-    filter: brightness(0.4) contrast(3.5);
 }
 
 #debug-panel {
     position: absolute;
     z-index: 4;
-    background: rgba(0, 0, 0, 0.6); /* Semi-transparent for visibility over video */
+    background: rgba(0, 0, 0, 0.75); /* Semi-transparent for visibility over video */
     color: var(--ui);
     padding: 10px;
-    font-family: monospace;
     font-size: 14px;
     max-width: 300px;
+
+    user-select: none;
+
+    font-family: monospace;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+#bot-panel {
+    position: absolute;
+    bottom: 0;
+    z-index: 4;
+    background: rgba(0, 0, 0, 0.75); /* Semi-transparent for visibility over video */
+    color: var(--strong-ui);
+    padding: 10px;
+    font-size: 14px;
+    width: 100%;
+}
+
+body.style-void {
+    cursor: crosshair;
+}
+body.style-void #background {
+    background-image: url("/res/Glainimension.jpg");
+    filter: brightness(0.4)
+}
+
+body.style-3th #background {
+    background-image: url("/res/lainimension.jpg");
+    filter: brightness(0.4)
+}
+body.style-3th #debug-panel {
+    top: 10px;
+    left: 25px;
+    text-shadow: 
+        0 0 8px var(--ui),
+        0 0 10px var(--ui);
+    border: 1px solid var(--ui); 
+    padding: 20px;
+    border-radius: 4px;
+    box-shadow: 
+        -5px -5px 0px rgba(0,0,0,0.2),
+        -10px -10px 15px rgba(0,0,0,0.4);
+    transform: perspective(250px) rotateX(-5deg) rotateY(5deg);
+}
+body.style-3th #bot-panel {
+    width: 80%;
+    left: 10%;
+    bottom: 10px;
+    box-sizing: border-box;
+    border: 1px solid var(--ui); 
+    padding: 20px;
+    border-radius: 4px;
+    box-shadow: 
+        0px 5px 0px rgba(0,0,0,0.2),
+        0px 10px 15px rgba(0,0,0,0.4);
+    transform: perspective(250px) rotateX(5deg) rotateY(0deg);
 }
