--- a/style.css
+++ b/style.css
@@ -24,19 +24,30 @@ header {
     display: flex;
     flex-direction: column;
 }
-
 header h1 {
     margin-bottom: 1rem;
     font-size: 2rem;
     color: var(--fg);
 }
-
 header p {
     text-align: left;
     margin: 0 auto;
     max-width: 700px;
     line-height: 1.6;
     color: var(--fg);
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    text-indent: 1rem;
+    padding-bottom: 120px !important;
+}
+
+nav {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 #content {
@@ -64,7 +75,7 @@ header p {
     padding: 4rem;
 }
 
-#content .grid a {
+#content .grid .cell {
     position: relative;  /* required for label positioning */
     display: block;
     width: 100%;
@@ -76,11 +87,11 @@ header p {
     overflow: hidden;
 }
 
-#content .grid a:hover {
+#content .grid .cell:hover {
     transform: scale(1.1);
 }
 
-#content .grid a .label {
+#content .grid .cell .label {
     position: absolute;
     bottom: 0;
     width: 100%;
