--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,16 +16,10 @@ body {
     margin: 0;
     padding: 0;
     background: repeating-linear-gradient(-45deg,
-            /* angle of the stripes */
             var(--fin1),
-            /* first color (grey) */
             var(--fin1) 10px,
-            /* grey stripe width */
             var(--fin2) 10px,
-            /* second color (white) start */
-            var(--fin2) 20px
-            /* white stripe width */
-        );
+            var(--fin2) 20px);
 }
 
 header {
@@ -62,11 +56,14 @@ nav {
     flex-direction: column;
     gap: 1rem;
 }
+
 header nav {
-    align-items: center;
+    justify-content: center;
+    flex-direction: row;
 }
 
-nav a {
+a {
+    text-decoration: none;
     width: max-content;
 }
 
@@ -141,6 +138,7 @@ nav a {
         gap: 3rem;
         padding: 3rem;
     }
+
 }
 
 #scoreboard li {
@@ -165,5 +163,52 @@ nav a {
 }
 
 #scoreboard li:nth-child(3) {
-    background-color: #cd7f32; /* Bronze */
+    background-color: #e4953c;
+    /* Bronze */
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    max-width: 1200px;
+    margin: 3rem auto;
+    padding: 1rem;
+}
+
+section .row {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 12%;
+    margin-right: 12%;
+    align-items: start;
+}
+
+section .row .text {
+    flex: 1;
+    min-width: 200px;
+}
+
+section .row img {
+    max-width: 300px;
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    border-radius: 4px;
+}
+
+@media (max-width: 768px) {
+    section .row {
+        flex-direction: column;
+        align-items: flex-start;
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    section .row img {
+        max-width: 100%;
+        width: 100%;
+        height: auto;
+    }
 }
